--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
